<resources>
    <string name="app_name">My Material Design</string>
    <string name="search">Найти</string>
    <string name="today">Сегодняшняя</string>
    <string name="yesterday">Вчерашняя</string>
    <string name="before_yesterday">Позaвчерашняя</string>
    <string name="search_wiki">Поиск в википедии</string>
    <string name="title">Title</string>
    <string name="explanation">Explanation</string>
    <string name="selection_theme">Выбор темы</string>
    <string name="selection_color_theme">Выбор цвета</string>
    <string name="selection_style">Выбор стиля</string>
    <string name="text_tab_theme_grey">Серая</string>
    <string name="text_tab_theme_green">Зеленая</string>
    <string name="text_tab_theme_orange">Оранжевая</string>
    <string name="text_tab_theme_light">Светлая</string>
    <string name="text_tab_theme_dark">Темная</string>
    <string name="text_tab_theme_system">Системная</string>
    <string name="text_chip_style_square_corners">Квадратные углы</string>
    <string name="text_chip_style_rounded_corners">Закругленные углы</string>
    <string name="name_tab_date">Дата</string>
    <string name="photo_to_day">Фото дня VP</string>
    <string name="setting">Настройки</string>
    <string name="mars">Марс</string>
    <string name="weather">Фото дня Coordin</string>

    <string name="text">
        "The EPIC API provides information on the daily imagery
        collected by DSCOVR's Earth"
        "Polychromatic Imaging Camera
        (EPIC) instrument. Uniquely positioned at the Earth-Sun"
        "Lagrange point, EPIC provides full disc imagery of the Earth and captures unique"
        "perspectives of certain astronomical events such as lunar transits using"
        "a 2048x2048 pixel CCD (Charge Coupled Device) detector coupled to"
        "a 30-cm aperture Cassegrain telescope." \n\n


        Image metadata and key information are provided by the JSON API and can be
        requested by date and for the most recent available date. A listing
        of all available dates can also be retrieved via the API for more granular control.
        Development of the EPIC API began in 2015, and is supported by the web development
        team for the Laboratory for Atmospheres in the Earth Sciences Division of the
        Goddard Space Flight Center. More information regarding the API and retrieval
        of the imagery for download can be found on the EPIC website. \n\n


        "The EPIC API provides information on the daily imagery
        collected by DSCOVR's Earth"
        "Polychromatic Imaging Camera
        (EPIC) instrument. Uniquely positioned at the Earth-Sun"
        "Lagrange point, EPIC provides full disc imagery of the Earth and captures unique"
        "perspectives of certain astronomical events such as lunar transits using"
        "a 2048x2048 pixel CCD (Charge Coupled Device) detector coupled to"
        "a 30-cm aperture Cassegrain telescope." \n\n


        Image metadata and key information are provided by the JSON API and can be
        requested by date and for the most recent available date. A listing
        of all available dates can also be retrieved via the API for more granular control.
        Development of the EPIC API began in 2015, and is supported by the web development
        team for the Laboratory for Atmospheres in the Earth Sciences Division of the
        Goddard Space Flight Center. More information regarding the API and retrieval
        of the imagery for download can be found on the EPIC website.\n\n
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>