<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/imageDayMenuBottom"
        android:icon="@drawable/ic_camera"
        android:title="@string/photo_to_day"
        android:orderInCategory="30" />

    <item
        android:id="@+id/settingMenuBottom"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/setting"
        android:orderInCategory="50" />
    <item
        android:id="@+id/marsMenuBottom"
        android:icon="@drawable/ic_mars"
        android:title="@string/mars"
        android:orderInCategory="20" />

    <item
        android:id="@+id/weatherMenuBottom"
        android:icon="@drawable/ic_telescope"
        android:title="@string/weather"
        android:orderInCategory="40" />

    <item
        android:id="@+id/searchMenuBottom"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:orderInCategory="10" />

</menu>