<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top_scroll_setting_frag">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_start_tv_paragh_menu_setting"
                android:text="@string/selection_theme"
                android:textSize="@dimen/text_size_paragh_menu_setting" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabsTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_theme_light" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_theme_dark" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_theme_system" />

            </com.google.android.material.tabs.TabLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_view_line"
                android:layout_marginTop="@dimen/margin_top_view_line"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_start_tv_paragh_menu_setting"
                android:text="@string/selection_color_theme"
                android:textSize="@dimen/text_size_paragh_menu_setting" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabsColorTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_theme_grey" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_theme_green" />


                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_theme_orange" />


            </com.google.android.material.tabs.TabLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_view_line"
                android:layout_marginTop="@dimen/margin_top_view_line"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_start_tv_paragh_menu_setting"
                android:text="@string/selection_style"
                android:textSize="@dimen/text_size_paragh_menu_setting" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/squareCorners"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_chip_style_square_corners" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/roundedCorners"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_chip_style_rounded_corners" />

            </com.google.android.material.chip.ChipGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>